2003-02-28  Martin M. Hunt  <hunt@redhat.com>

	* c_variable.test: Fix result for 6.22.

2003-02-27  Martin M. Hunt  <hunt@redhat.com>

	* cpp_variable.test: Major changes required because varobj_update
	now returns "-1" if a variable is out of scope.

	* c_variable.test: Major changes required because varobj_update
	now returns "-1" if a variable is out of scope. This fixes a bunch 
	of XFAILS. Change bug reporting address.
	
	* windows.test: Remove HtmlViewer from list of windows.

	* srcwin.test: Use "list get" instead of "listget" to
	get contents of comboboxes. 
	(2.1): Be less sensitive. 

	* srcwin2.test: Use "list get" instead of "listget" to
	get contents of comboboxes
	(2-1.3): Accept assembly == mixed
	for no source tests.

	* srcwin3.test:  Use "list get" instead of "listget" to
	get contents of comboboxes

2002-09-09  Fred Fish  <fnf@intrinsity.com>

	* simple.c:  Pass addresses to strncpy, not chars.

2002-04-26  Martin M. Hunt  <hunt@redhat.com>

	* defs (gdbtk_test_done): Call gdbtk_force_quit. 

2002-04-26  Martin M. Hunt  <hunt@redhat.com>

	* srcwin.test (click): Take a button number as an arg.
	Generate a ButtonPress event then a ButtonRelease event
	for that button number.
	(4.4): Fix args for click().
	(5.1): Fix results again.

2002-03-07  Martin M. Hunt  <hunt@redhat.com>

	* srcwin.test (5.1): Adjust line numbers to
	test now runs correctly.

2002-01-18  Keith Seitz  <keiths@redhat.com>

	* console.test: Don't rely on "event generate" to do
	keystrokes. It just doesn't work. Use the console window's
	"test" method instead.
	Use Console::test instead of Console::get_text.

2002-01-15  Keith Seitz  <keiths@redhat.com>

	* c_variable.test (1.4,2.14): Remove test for local frame
	variables. Varobj now forces evaluation in the current frame
	by default.
	(2.15): Ignore any changes and only check for out of scope
	locals (which is still unsupported).
	* cpp_variable.test (1.1): Support alternative names for
	local scope.